--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 
         <button>Download CV</button>
     </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+        <i class="fa-brands fa-github"></i>
+        <i class="fa-solid fa-envelope"></i>
+    </footer>
     <script href="assets/scripts/script.js"></script>
 </body>
 </html>
